Fix negative margin on small screen footer

--- a/styles/sass/components/Footer.module.scss
+++ b/styles/sass/components/Footer.module.scss
@@ -14,6 +14,10 @@
     margin: 0 calc(#{$broadSpace} * -1);
     flex-wrap: wrap;
 
+    @media screen and (max-width: $mediumScreen) {
+      margin: 0 calc(#{$closeSpace} * -1);
+    }
+
     .companyInfo {
       width: calc(100%  / 6);
       padding: 0 $broadSpace;
